What's new in PyObjC
====================

An overview of the relevant changes in new, and older, releases.

Version 3.0.4
-------------

* Fix installation on OSX 10.10 when using "pip install pyobjc".

  Issues #102, #103.

* Fix crash when ``sys.modules`` contains an object that is not a string.

  Issue #95.

Version 3.0.3
-------------

* Fix a number of OSX 10.10 support issues.

Version 3.0.2
-------------

* Issue #99: Installation failed with recent versions of setuptools due to
  invalid assumptions in the PyObjC setup script.

* Issue #93: For a objc.PyObjCPointer object ``ptr.pointerAsInteger`` returned
  a 32-bit value on 64-bit systems.

* Issue #92: Removed dependency on pyobjc-framework-GameKit from the pyobjc
  package, GameKit isn't packaged yet.


Version 3.0.1
-------------

* Issue #86: Fix installation issue with setuptools 3.6.

* Issue #85: Remove debug output from the wrapper for ``NSApplicationMain``.

* Issue #82: NSArray.__iter__ was accedently removed in PyObjC 3.0

* PyObjCTools.Debugging didn't work properly on recent OSX versions (at least OSX 10.9)
  because ``/usr/bin/atos`` no longer worked.

Version 3.0
-----------

* Issue #50: Accessing Objective-C methods on "magic cookie" variables,
  like ``LaunchServices.kLSSharedFileListItemLast`` would crash the interpreter.

  This affected code like::

      from LaunchServices import kLSSharedFileListItemLast

      kLSSharedFileListItemLast == kLSSharedFileListItemLast
      dir(kLSSharedFileListItemLast)
      kLSSharedFileListItemLast.compare_

* Added a decorator "python_method" than can be used to decorate methods that should
  not be registered with the Objective-C runtime and should not be converted to a
  Objective-C selector.

  Usage::

      class MyClass (NSObject):

          @python_method
	  @classmethod
	  def fromkeys(self, keys):
	      pass

  This makes it easier to add a more "pythonic" API to Objective-C subclasses without